2010-07-05  Akira Kakuto

	* term/win.trm:  More fixes to font initialization.
	Bug #2972307 #2993504

2010-07-02  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/win.trm:  Explicitly initialize font.
	Bug #2972307

2010-07-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readbinary): Regardless of the current timefmt
	setting, if we are reading time data from a binary file it will come in
	as a floating point value rather than as a string.  So we can treat it
	like any other binary value.
	Thanks to Thomas Sefzick for pointing this out.

	* src/datafile.c (df_readbinary): In binary mode, string-valued 
	functions were silently ignored.  Fix this, thus allowing binary files
	to be plotted "with labels".  For example: 
	plot 'foo' binary format='%double' using 0:1:("A") with labels

2010-07-01  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc src/axis.h src/command.c src/datafile.c src/gp_time.h
	src/internal.c src/time.c:

	Track time coordinates to sub-second precision.
	
	Time data read using the %S format specifier in "set timefmt" is now
	treated as a floating point number rather than an integer. This affects
	data read from an input file ("set xdata time"), the axis range and tic
	locations given for an axis using time coordinates ("set xrange",
	"set xtics"), and time conversions performed via calls to strptime().

	Time data output formats ("set format" strftime()) now accept a 
	precision modifier to the %S format. For example, "%H:%M:%.3S" will
	print hour, minute, seconds to a precision of milliseconds.
	gnuplot> print strftime("%Y %D %H:%M:%.3S", 12345.6789)
	         2000 01/01/00 03:25:45.679

	The maximum precision allowed for output is 6 digits (microseconds).
	6 digit accuracy is possible for absolute dates through the year 2550.


2010-06-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data): Add back the rather useless code that handles